raffia/tests/error/less/value/parens-3.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but found `{`
  ┌─ parens-3.less:1:4
  │
1 │ .a {
  │    ^


